# src/models/database/product.go
@@ -9,20 +9,21 @@ import (
 // Product is the database model of a product
 type Product struct {
 	gorm.Model
-	Barcode         string         `json:"barcode"`
-	ProductName     string         `json:"productName"`
-	Categories      string         `json:"categories"`
-	Countries       string         `json:"countries"`
-	ImageURL        string         `json:"imageUrl"`
-	ExpireAt        time.Time      `json:"expireAt"`
-	ScannedAt       time.Time      `json:"scannedAt"`
-	NotifiedAt      time.Time      `json:"notifiedAt"`
-	DeletedAt       gorm.DeletedAt `gorm:"index"`
-	HouseholdID     uint           `gorm:"index, not null" json:"-"`
-	Household       Household      `json:"-"`
-	Amount          int            `json:"amount"`
-	Unit            string         `json:"unit"`
-	StorageLocation string         `json:"storageLocation"`
+	Barcode           string           `json:"barcode"`
+	ProductName       string           `json:"productName"`
+	Categories        string           `json:"categories"`
+	Countries         string           `json:"countries"`
+	ImageURL          string           `json:"imageUrl"`
+	ExpireAt          time.Time        `json:"expireAt"`
+	ScannedAt         time.Time        `json:"scannedAt"`
+	NotifiedAt        time.Time        `json:"notifiedAt"`
+	DeletedAt         gorm.DeletedAt   `gorm:"index"`
+	HouseholdID       uint             `gorm:"index, not null" json:"-"`
+	Household         Household        `json:"-"`
+	Amount            int              `json:"amount"`
+	Unit              string           `json:"unit"`
+	StorageLocationID *uint            `gorm:"index"                        json:"storageLocationId"`
+	StorageLocation   *StorageLocation `gorm:"foreignKey:StorageLocationID" json:"storageLocation,omitempty"`
 }
 
 // ProductDTOExpire is a simplified DTO for product expiration
@@ -39,13 +40,13 @@ type ProductDTOBarcode struct {
 
 // ProductDTOPatch is a simplified DTO only containing the patchable elements
 type ProductDTOPatch struct {
-	ID              uint      `json:"ID"`
-	ProductName     string    `json:"productName"`
-	Categories      string    `json:"categories"`
-	Countries       string    `json:"countries"`
-	ImageURL        string    `json:"imageUrl"`
-	ExpireAt        time.Time `json:"expireAt"`
-	Amount          int       `json:"amount"`
-	Unit            string    `json:"unit"`
-	StorageLocation string    `json:"storageLocation"`
+	ID                uint      `json:"ID"`
+	ProductName       string    `json:"productName"`
+	Categories        string    `json:"categories"`
+	Countries         string    `json:"countries"`
+	ImageURL          string    `json:"imageUrl"`
+	ExpireAt          time.Time `json:"expireAt"`
+	Amount            int       `json:"amount"`
+	Unit              string    `json:"unit"`
+	StorageLocationID *uint     `json:"storageLocationId"`
 }
